--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://manch0ffline.github.io/AB_AutoCheck/images/seo-img.png"
+      content="https://manch0ffline.github.io/ab-auto-check/images/seo-img.png"
     />
     <meta property="og:type" content="website" />
 
@@ -40,11 +40,11 @@
     />
     <meta
       name="twitter:image"
-      content="https://manch0ffline.github.io/AB_AutoCheck/images/seo-img.png"
+      content="https://manch0ffline.github.io/ab-auto-check/images/seo-img.png"
     />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://manch0ffline.github.io/AB_AutoCheck" />
+    <link rel="canonical" href="https://manch0ffline.github.io/ab-auto-check/" />
   </head>
   <body>
     <div id="root"></div>
